--- a/assingment1w2/list.html
+++ b/assingment1w2/list.html
@@ -9,14 +9,20 @@
 .auto-style1 {
 	text-align: center;
 }
+.auto-style2 {
+	text-align: left;
+}
 </style>
 </head>
 
 <body>
 
 <h2 class="auto-style1">List</h2>
+<p class="auto-style2">Back To <a href="index.html">Home</a></p>
 <p class="auto-style1" style="height: 430px">
-<img alt="menu" height="334" src="images/81c383d4c039706ae37a6d8cbddd299c.jpg" width="650">Back</p>
+<img alt="menu" height="334" src="images/81c383d4c039706ae37a6d8cbddd299c.jpg" width="650"></p>
+<p class="auto-style1" style="height: 430px">
+To View The Calendar Click <a href="../assignment02w3/calendar.html">here</a></p>
 
 </body>
 
