--- a/assingment1w2/Estimate.html
+++ b/assingment1w2/Estimate.html
@@ -1,51 +1,55 @@
-﻿<!DOCTYPE html>
-<html>
+﻿<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
 
 <head>
-<meta content="text/html; charset=utf-8" http-equiv="Content-Type">
-<title>Order</title>
-<style type="text/css">
-.auto-style1 {
-	margin-left: 0px;
-}
-</style>
+<meta content="text/html; charset=utf-8" http-equiv="Content-Type" />
+<title>Order form</title>
+<link rel="stylesheet" href="styles.css" />
+<script src="price.js"></script>
+
 </head>
 
 <body>
+<header>
+      <h1>
+         Order Sheet
+      </h1>
+   </header>
 
-<div style="height: 540px">
-	<form method="post" class="auto-style1" style="height: 511px">
-		MENU/ORDER<br><br>
-		<input name="double_double" tabindex="1" type="text" value="Double Double($3.60)" style="width: 147px"><input name="doubleDouble" id="item1" tabindex="1" type="checkbox" value="3.60">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-		<br>
-		<input name="cheesburger" tabindex="3" type="text" value="Cheeseburger($2.50)"><input name="Cheese" id="item2" tabindex="3" type="checkbox" value="2.50">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-		<br>
-		<input name="hamburger" tabindex="5" type="text" value="Hamburger($2.20)"><input name="Hamburger" id="item3" tabindex="5" type="checkbox" value="2.20">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-		<br>
-		<input name="french_fries" tabindex="7" type="text" value="French Fries($1.65)"><input name="French_Fries" id="item4" style="width: 20px" tabindex="7" type="checkbox" value="1.65">&nbsp;&nbsp;&nbsp;&nbsp;<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-		<br><br>
-		<input class="auto-style1" name="beverage_size" style="width: 420px" tabindex="21" type="text" value="                             Beverage Size"><br>
-		<br>
-		<input name="small1" style="width: 79px" tabindex="21" type="text" value="small($1.50)" size="20"><input name="small" id="item5" tabindex="21" type="checkbox" value="1.50"><input name="medium1" size="20" style="width: 98px" tabindex="21" type="text" value="medium($1.65)"><input name="medium" id="item6" style="height: 20px" tabindex="21" type="checkbox" value="1.65"><input name="large1" size="20" style="width: 78px" tabindex="21" type="text" value="large($1.85)"><input name="large" id="item7" tabindex="21" type="checkbox" value="1.85"><input name="x_large1" size="20" style="width: 88px" tabindex="21" type="text" value="x large($2.05)"><input name="x_large" id="item8" tabindex="21" type="checkbox" value="2.05"><br>
-		<br>
-		<input name="coke" tabindex="9" type="text" value="Coke"><input name="Coke" id="item9" tabindex="9" type="checkbox" value="1"><input name="seven_up1" size="20" tabindex="17" type="text" value="Seven Up"><input name="seven_up" id="itema" tabindex="17" type="checkbox" value="1"><input name="lemonade1" style="height: 22px" tabindex="13" type="text" value="Lemonade" size="20"><input name="lemonade" id="itemb" style="height: 20px" tabindex="13" type="checkbox" value="1"><br>
-		<input name="root_beer1" size="20" style="height: 22px" tabindex="11" type="text" value="Root Beer"><input name="root_beer" id="itemc" tabindex="11" type="checkbox" value="1"><input name="dr_pepper1" size="20" tabindex="19" type="text" value="Dr.Pepper"><input name="dr_pepper" id="itemd" tabindex="19" type="checkbox" value="1"><input name="iced_tea1" style="height: 22px" tabindex="15" type="text" value="Iced Tea" size="20"><input name="iced_tea" id="iteme" tabindex="15" type="checkbox" value="1"><br>
-		<br><br>
-		<input name="shake1" size="20" style="width: 352px" tabindex="23" type="text" value="                                Shake($2.25)"><br>
-		<input name="shake2" size="20" style="width: 75px" tabindex="23" type="text" value="Chocolate"><input name="shake7" id="itemf" tabindex="23" type="checkbox" value="2.25"><input name="shake4" size="20" style="width: 75px" tabindex="23" type="text" value="Strawberry"><input name="shake5" id="itemg" tabindex="23" type="checkbox" value="2.25"><input name="shake6" size="20" style="width: 70px" tabindex="23" type="text" value="Vanilla"><input name="shake" id="itemh" tabindex="23" type="checkbox" value="2.25"><br>
-		<br>
-		<input name="milk1" size="20" tabindex="25" type="text" value="Milk($0.99)"><input name="milk" id="itemi" tabindex="25" type="checkbox" value="0.99"><input name="coffee1" size="20" tabindex="27" type="text" value="Coffee($1.35)"><input name="coffee" id="itemj" tabindex="27" type="checkbox" value="1.35"><br>
-		<br>
-		<input name="Submit1" id="submit" type="submit" value="submit"><br><br>
-		<br><br><br><br><br></form>
-</div>
-<script src="calculation.js">
-document.getElementById("submit").
-addEventListener("click", calcTotal, false);</script>
+<article style="height: 572px">
+      <h2>Menu</h2>
+      <form>
+         <input type="checkbox" id="item1" value="3.60" />
+         <label for="item1">Double Double</label>
+         <input type="checkbox" id="item2" value="2.50" />
+         <label for="item2">Cheeseburger</label>
+         <input type="checkbox" id="item3" value="2.20" />
+         <label for="item3">Hamburger</label>
+         <input type="checkbox" id="item4" value="1.60" />
+         <label for="item4">French Fries</label>
+         <input type="checkbox" id="item5" value="1.65" />
+         <label for="item5">Coke</label>
+         <input type="checkbox" id="item6" value="1.65" />
+         <label for="item6">Root Beer</label>
+         <input type="checkbox" id="item7" value="1.65" />
+         <label for="item7">Lemonade</label>
+         <input type="checkbox" id="item8" value="1.65" />
+         <label for="item8">Iced Tea</label>
+         <input type="checkbox" id="item9" value="1.65" />
+         <label for="item9">Dr.Pepper</label>
+         <input type="checkbox" id="item01" value="2.25" />
+         <label for="item01">Shakes</label>
+         <input type="checkbox" id="item02" value="0.99" />
+         <label for="item02">Milk</label>
+         <input type="checkbox" id="item03" value="1.35" />
+         <label for="item03">Coffee</label>
+         <input type="button" value="Submit" id="sButton" />
+      </form>
+      <div>
+         <p id="total"></p>
+      </div>
+   </article>
+<script src="calculation.js"></script>
 </body>
 
 </html>
